TinyC/y.output
Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Program FuncDecl

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts '}'

    4 RetType: T_Int
    5        | T_Void

    6 FuncName: T_Identifier

    7 Args: %empty
    8     | _Args

    9 _Args: T_Int T_Identifier
   10      | _Args ',' T_Int T_Identifier

   11 VarDecls: %empty
   12         | VarDecls VarDecl ';'

   13 VarDecl: T_Int T_Identifier
   14        | VarDecl ',' T_Identifier

   15 Stmts: %empty
   16      | Stmts Stmt

   17 Stmt: AssignStmt
   18     | PrintStmt
   19     | CallStmt
   20     | ReturnStmt
   21     | IfStmt
   22     | WhileStmt
   23     | BreakStmt
   24     | ContinueStmt

   25 AssignStmt: T_Identifier '=' Expr ';'

   26 PrintStmt: T_Print '(' T_StringConstant PActuals ')' ';'

   27 PActuals: %empty
   28         | PActuals ',' Expr

   29 CallStmt: CallExpr ';'

   30 CallExpr: T_Identifier '(' Actuals ')'

   31 Actuals: %empty
   32        | Expr PActuals

   33 ReturnStmt: T_Return Expr ';'
   34           | T_Return ';'

   35 IfStmt: If TestExpr Then StmtsBlock EndThen EndIf
   36       | If TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

   37 TestExpr: '(' Expr ')'

   38 StmtsBlock: '{' Stmts '}'

   39 If: T_If

   40 Then: %empty

   41 EndThen: %empty

   42 Else: T_Else

   43 EndIf: %empty

   44 WhileStmt: While TestExpr Do StmtsBlock EndWhile

   45 While: T_While

   46 Do: %empty

   47 EndWhile: %empty

   48 BreakStmt: T_Break ';'

   49 ContinueStmt: T_Continue ';'

   50 Expr: Expr '+' Expr
   51     | Expr '-' Expr
   52     | Expr '*' Expr
   53     | Expr '/' Expr
   54     | Expr '%' Expr
   55     | Expr '>' Expr
   56     | Expr '<' Expr
   57     | Expr T_Ge Expr
   58     | Expr T_Le Expr
   59     | Expr T_Eq Expr
   60     | Expr T_Ne Expr
   61     | Expr T_Or Expr
   62     | Expr T_And Expr
   63     | '-' Expr
   64     | '!' Expr
   65     | T_IntConstant
   66     | T_Identifier
   67     | ReadInt
   68     | CallExpr
   69     | '(' Expr ')'

   70 ReadInt: T_ReadInt '(' T_StringConstant ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'%' (37) 54
'(' (40) 3 26 30 37 69 70
')' (41) 3 26 30 37 69 70
'*' (42) 52
'+' (43) 50
',' (44) 10 14 28
'-' (45) 51 63
'/' (47) 53
';' (59) 12 25 26 29 33 34 48 49
'<' (60) 56
'=' (61) 25
'>' (62) 55
'{' (123) 3 38
'}' (125) 3 38
error (256)
T_Int (258) 4 9 10 13
T_Void (259) 5
T_Return (260) 33 34
T_Print (261) 26
T_ReadInt (262) 70
T_While (263) 45
T_If (264) 39
T_Else (265) 42
T_Break (266) 48
T_Continue (267) 49
T_Le (268) 58
T_Ge (269) 57
T_Eq (270) 59
T_Ne (271) 60
T_And (272) 62
T_Or (273) 61
T_IntConstant (274) 65
T_StringConstant (275) 26 70
T_Identifier (276) 6 9 10 13 14 25 30 66


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1 2, on right: 0 2
FuncDecl (39)
    on left: 3, on right: 2
RetType (40)
    on left: 4 5, on right: 3
FuncName (41)
    on left: 6, on right: 3
Args (42)
    on left: 7 8, on right: 3
_Args (43)
    on left: 9 10, on right: 8 10
VarDecls (44)
    on left: 11 12, on right: 3 12
VarDecl (45)
    on left: 13 14, on right: 12 14
Stmts (46)
    on left: 15 16, on right: 3 16 38
Stmt (47)
    on left: 17 18 19 20 21 22 23 24, on right: 16
AssignStmt (48)
    on left: 25, on right: 17
PrintStmt (49)
    on left: 26, on right: 18
PActuals (50)
    on left: 27 28, on right: 26 28 32
CallStmt (51)
    on left: 29, on right: 19
CallExpr (52)
    on left: 30, on right: 29 68
Actuals (53)
    on left: 31 32, on right: 30
ReturnStmt (54)
    on left: 33 34, on right: 20
IfStmt (55)
    on left: 35 36, on right: 21
TestExpr (56)
    on left: 37, on right: 35 36 44
StmtsBlock (57)
    on left: 38, on right: 35 36 44
If (58)
    on left: 39, on right: 35 36
Then (59)
    on left: 40, on right: 35 36
EndThen (60)
    on left: 41, on right: 35 36
Else (61)
    on left: 42, on right: 36
EndIf (62)
    on left: 43, on right: 35 36
WhileStmt (63)
    on left: 44, on right: 22
While (64)
    on left: 45, on right: 44
Do (65)
    on left: 46, on right: 44
EndWhile (66)
    on left: 47, on right: 44
BreakStmt (67)
    on left: 48, on right: 23
ContinueStmt (68)
    on left: 49, on right: 24
Expr (69)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69, on right: 25 28 32 33 37 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 69
ReadInt (70)
    on left: 70, on right: 67


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    2 Program: Program . FuncDecl

    $end    shift, and go to state 2
    T_Int   shift, and go to state 3
    T_Void  shift, and go to state 4

    FuncDecl  go to state 5
    RetType   go to state 6


State 2

    0 $accept: Program $end .

    $default  accept


State 3

    4 RetType: T_Int .

    $default  reduce using rule 4 (RetType)


State 4

    5 RetType: T_Void .

    $default  reduce using rule 5 (RetType)


State 5

    2 Program: Program FuncDecl .

    $default  reduce using rule 2 (Program)


State 6

    3 FuncDecl: RetType . FuncName '(' Args ')' '{' VarDecls Stmts '}'

    T_Identifier  shift, and go to state 7

    FuncName  go to state 8


State 7

    6 FuncName: T_Identifier .

    $default  reduce using rule 6 (FuncName)


State 8

    3 FuncDecl: RetType FuncName . '(' Args ')' '{' VarDecls Stmts '}'

    '('  shift, and go to state 9


State 9

    3 FuncDecl: RetType FuncName '(' . Args ')' '{' VarDecls Stmts '}'

    T_Int  shift, and go to state 10

    $default  reduce using rule 7 (Args)

    Args   go to state 11
    _Args  go to state 12


State 10

    9 _Args: T_Int . T_Identifier

    T_Identifier  shift, and go to state 13


State 11

    3 FuncDecl: RetType FuncName '(' Args . ')' '{' VarDecls Stmts '}'

    ')'  shift, and go to state 14


State 12

    8 Args: _Args .
   10 _Args: _Args . ',' T_Int T_Identifier

    ','  shift, and go to state 15

    $default  reduce using rule 8 (Args)


State 13

    9 _Args: T_Int T_Identifier .

    $default  reduce using rule 9 (_Args)


State 14

    3 FuncDecl: RetType FuncName '(' Args ')' . '{' VarDecls Stmts '}'

    '{'  shift, and go to state 16


State 15

   10 _Args: _Args ',' . T_Int T_Identifier

    T_Int  shift, and go to state 17


State 16

    3 FuncDecl: RetType FuncName '(' Args ')' '{' . VarDecls Stmts '}'

    $default  reduce using rule 11 (VarDecls)

    VarDecls  go to state 18


State 17

   10 _Args: _Args ',' T_Int . T_Identifier

    T_Identifier  shift, and go to state 19


State 18

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls . Stmts '}'
   12 VarDecls: VarDecls . VarDecl ';'

    T_Int  shift, and go to state 20

    $default  reduce using rule 15 (Stmts)

    VarDecl  go to state 21
    Stmts    go to state 22


State 19

   10 _Args: _Args ',' T_Int T_Identifier .

    $default  reduce using rule 10 (_Args)


State 20

   13 VarDecl: T_Int . T_Identifier

    T_Identifier  shift, and go to state 23


State 21

   12 VarDecls: VarDecls VarDecl . ';'
   14 VarDecl: VarDecl . ',' T_Identifier

    ','  shift, and go to state 24
    ';'  shift, and go to state 25


State 22

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts . '}'
   16 Stmts: Stmts . Stmt

    T_Return      shift, and go to state 26
    T_Print       shift, and go to state 27
    T_While       shift, and go to state 28
    T_If          shift, and go to state 29
    T_Break       shift, and go to state 30
    T_Continue    shift, and go to state 31
    T_Identifier  shift, and go to state 32
    '}'           shift, and go to state 33

    Stmt          go to state 34
    AssignStmt    go to state 35
    PrintStmt     go to state 36
    CallStmt      go to state 37
    CallExpr      go to state 38
    ReturnStmt    go to state 39
    IfStmt        go to state 40
    If            go to state 41
    WhileStmt     go to state 42
    While         go to state 43
    BreakStmt     go to state 44
    ContinueStmt  go to state 45


State 23

   13 VarDecl: T_Int T_Identifier .

    $default  reduce using rule 13 (VarDecl)


State 24

   14 VarDecl: VarDecl ',' . T_Identifier

    T_Identifier  shift, and go to state 46


State 25

   12 VarDecls: VarDecls VarDecl ';' .

    $default  reduce using rule 12 (VarDecls)


State 26

   33 ReturnStmt: T_Return . Expr ';'
   34           | T_Return . ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53

    CallExpr  go to state 54
    Expr      go to state 55
    ReadInt   go to state 56


State 27

   26 PrintStmt: T_Print . '(' T_StringConstant PActuals ')' ';'

    '('  shift, and go to state 57


State 28

   45 While: T_While .

    $default  reduce using rule 45 (While)


State 29

   39 If: T_If .

    $default  reduce using rule 39 (If)


State 30

   48 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 58


State 31

   49 ContinueStmt: T_Continue . ';'

    ';'  shift, and go to state 59


State 32

   25 AssignStmt: T_Identifier . '=' Expr ';'
   30 CallExpr: T_Identifier . '(' Actuals ')'

    '='  shift, and go to state 60
    '('  shift, and go to state 61


State 33

    3 FuncDecl: RetType FuncName '(' Args ')' '{' VarDecls Stmts '}' .

    $default  reduce using rule 3 (FuncDecl)


State 34

   16 Stmts: Stmts Stmt .

    $default  reduce using rule 16 (Stmts)


State 35

   17 Stmt: AssignStmt .

    $default  reduce using rule 17 (Stmt)


State 36

   18 Stmt: PrintStmt .

    $default  reduce using rule 18 (Stmt)


State 37

   19 Stmt: CallStmt .

    $default  reduce using rule 19 (Stmt)


State 38

   29 CallStmt: CallExpr . ';'

    ';'  shift, and go to state 62


State 39

   20 Stmt: ReturnStmt .

    $default  reduce using rule 20 (Stmt)


State 40

   21 Stmt: IfStmt .

    $default  reduce using rule 21 (Stmt)


State 41

   35 IfStmt: If . TestExpr Then StmtsBlock EndThen EndIf
   36       | If . TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

    '('  shift, and go to state 63

    TestExpr  go to state 64


State 42

   22 Stmt: WhileStmt .

    $default  reduce using rule 22 (Stmt)


State 43

   44 WhileStmt: While . TestExpr Do StmtsBlock EndWhile

    '('  shift, and go to state 63

    TestExpr  go to state 65


State 44

   23 Stmt: BreakStmt .

    $default  reduce using rule 23 (Stmt)


State 45

   24 Stmt: ContinueStmt .

    $default  reduce using rule 24 (Stmt)


State 46

   14 VarDecl: VarDecl ',' T_Identifier .

    $default  reduce using rule 14 (VarDecl)


State 47

   70 ReadInt: T_ReadInt . '(' T_StringConstant ')'

    '('  shift, and go to state 66


State 48

   65 Expr: T_IntConstant .

    $default  reduce using rule 65 (Expr)


State 49

   30 CallExpr: T_Identifier . '(' Actuals ')'
   66 Expr: T_Identifier .

    '('  shift, and go to state 61

    $default  reduce using rule 66 (Expr)


State 50

   63 Expr: '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 67
    ReadInt   go to state 56


State 51

   64 Expr: '!' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 68
    ReadInt   go to state 56


State 52

   69 Expr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 69
    ReadInt   go to state 56


State 53

   34 ReturnStmt: T_Return ';' .

    $default  reduce using rule 34 (ReturnStmt)


State 54

   68 Expr: CallExpr .

    $default  reduce using rule 68 (Expr)


State 55

   33 ReturnStmt: T_Return Expr . ';'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 83


State 56

   67 Expr: ReadInt .

    $default  reduce using rule 67 (Expr)


State 57

   26 PrintStmt: T_Print '(' . T_StringConstant PActuals ')' ';'

    T_StringConstant  shift, and go to state 84


State 58

   48 BreakStmt: T_Break ';' .

    $default  reduce using rule 48 (BreakStmt)


State 59

   49 ContinueStmt: T_Continue ';' .

    $default  reduce using rule 49 (ContinueStmt)


State 60

   25 AssignStmt: T_Identifier '=' . Expr ';'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 85
    ReadInt   go to state 56


State 61

   30 CallExpr: T_Identifier '(' . Actuals ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    $default  reduce using rule 31 (Actuals)

    CallExpr  go to state 54
    Actuals   go to state 86
    Expr      go to state 87
    ReadInt   go to state 56


State 62

   29 CallStmt: CallExpr ';' .

    $default  reduce using rule 29 (CallStmt)


State 63

   37 TestExpr: '(' . Expr ')'

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 88
    ReadInt   go to state 56


State 64

   35 IfStmt: If TestExpr . Then StmtsBlock EndThen EndIf
   36       | If TestExpr . Then StmtsBlock EndThen Else StmtsBlock EndIf

    $default  reduce using rule 40 (Then)

    Then  go to state 89


State 65

   44 WhileStmt: While TestExpr . Do StmtsBlock EndWhile

    $default  reduce using rule 46 (Do)

    Do  go to state 90


State 66

   70 ReadInt: T_ReadInt '(' . T_StringConstant ')'

    T_StringConstant  shift, and go to state 91


State 67

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   63     | '-' Expr .

    $default  reduce using rule 63 (Expr)


State 68

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   64     | '!' Expr .

    $default  reduce using rule 64 (Expr)


State 69

   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   69     | '(' Expr . ')'

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ')'    shift, and go to state 92


State 70

   58 Expr: Expr T_Le . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 93
    ReadInt   go to state 56


State 71

   57 Expr: Expr T_Ge . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 94
    ReadInt   go to state 56


State 72

   59 Expr: Expr T_Eq . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 95
    ReadInt   go to state 56


State 73

   60 Expr: Expr T_Ne . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 96
    ReadInt   go to state 56


State 74

   62 Expr: Expr T_And . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 97
    ReadInt   go to state 56


State 75

   61 Expr: Expr T_Or . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 98
    ReadInt   go to state 56


State 76

   56 Expr: Expr '<' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 99
    ReadInt   go to state 56


State 77

   55 Expr: Expr '>' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 100
    ReadInt   go to state 56


State 78

   50 Expr: Expr '+' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 101
    ReadInt   go to state 56


State 79

   51 Expr: Expr '-' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 102
    ReadInt   go to state 56


State 80

   52 Expr: Expr '*' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 103
    ReadInt   go to state 56


State 81

   53 Expr: Expr '/' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 104
    ReadInt   go to state 56


State 82

   54 Expr: Expr '%' . Expr

    T_ReadInt      shift, and go to state 47
    T_IntConstant  shift, and go to state 48
    T_Identifier   shift, and go to state 49
    '-'            shift, and go to state 50
    '!'            shift, and go to state 51
    '('            shift, and go to state 52

    CallExpr  go to state 54
    Expr      go to state 105
    ReadInt   go to state 56


State 83

   33 ReturnStmt: T_Return Expr ';' .

    $default  reduce using rule 33 (ReturnStmt)


State 84

   26 PrintStmt: T_Print '(' T_StringConstant . PActuals ')' ';'

    $default  reduce using rule 27 (PActuals)

    PActuals  go to state 106


State 85

   25 AssignStmt: T_Identifier '=' Expr . ';'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82
    ';'    shift, and go to state 107


State 86

   30 CallExpr: T_Identifier '(' Actuals . ')'

    ')'  shift, and go to state 108


State 87

   32 Actuals: Expr . PActuals
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Le   shift, and go to state 70
    T_Ge   shift, and go to state 71
    T_Eq   shift, and go to state 72
    T_Ne   shift, and go to state 73
    T_And  shift, and go to state 74
    T_Or   shift, and go to state 75
    '<'    shift, and go to state 76
    '>'    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '%'    shift, and go to state 82

    $default  reduce using rule 27 (PActuals)

    PActuals  go to state 109


State 88

   37 TestExpr: '(' Expr . ')'
   50 Expr: Expr . '+' Expr
   51     | Expr . '-' Expr
   52     | Expr . '*' Expr
   53     | Expr . '/' Expr
   54     | Expr . '%' Expr
   55     | Expr . '>' Expr
   56     | Expr . '<' Expr
   57     | Expr . T_Ge Expr
   58     | Expr . T_Le Expr
   59     | Expr . T_Eq Expr
   60     | Expr . T_Ne Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
